--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,9 +18,16 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Instalar dependencias
+    - name: Instalar dependencias y Selenium
       run: |
-        pip install requests
+        sudo apt-get update
+        sudo apt-get install -y chromium-browser chromium-chromedriver
+        pip install selenium requests
+
+    - name: Configurar variables para Selenium
+      run: |
+        echo "CHROME_BIN=$(which chromium-browser)" >> $GITHUB_ENV
+        echo "CHROMEDRIVER_BIN=$(which chromedriver)" >> $GITHUB_ENV
 
     - name: Ejecutar script para generar playlist
       run: |
