--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Actualizar Playlist M3U
 on:
   schedule:
     - cron: "0 * * * *"  # Cada hora
-  workflow_dispatch:      # Permite ejecutarlo manualmente
+  workflow_dispatch:
 
 jobs:
   update-playlist:
@@ -23,11 +23,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y chromium-browser chromium-chromedriver
         pip install selenium requests
-
-    - name: Configurar variables para Selenium
-      run: |
-        echo "CHROME_BIN=$(which chromium-browser)" >> $GITHUB_ENV
-        echo "CHROMEDRIVER_BIN=$(which chromedriver)" >> $GITHUB_ENV
+        sudo ln -s /usr/bin/chromium-browser /usr/bin/google-chrome || true
+        which chromium-browser
+        which chromedriver
 
     - name: Ejecutar script para generar playlist
       run: |
