--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -31,10 +31,23 @@ jobs:
       run: |
         python generate_playlist.py
 
+    - name: Crear o actualizar README.md
+      run: |
+        PLAYLIST_URL="https://raw.githubusercontent.com/${{ github.repository }}/main/playlist.m3u"
+        DATE=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+        echo "# Playlist IPTV YouTube Argentina" > README.md
+        echo "" >> README.md
+        echo "**Enlace RAW para IPTV:**" >> README.md
+        echo "\`\`\`" >> README.md
+        echo "$PLAYLIST_URL" >> README.md
+        echo "\`\`\`" >> README.md
+        echo "" >> README.md
+        echo "**Última actualización:** $DATE" >> README.md
+
     - name: Commit y push de cambios
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git add playlist.m3u
-        git commit -m "Actualización automática de playlist"
+        git add playlist.m3u README.md
+        git commit -m "Actualización automática de playlist y README"
         git push
