--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,8 +13,9 @@ jobs:
 
       - name: Instalar dependencias
         run: |
-          sudo apt-get update && sudo apt-get install -y python3 python3-pip
-          pip install streamlink
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-pip ffmpeg
+          pip install --upgrade streamlink
 
       - name: Generar playlist
         run: python3 youtube_to_m3u.py
