--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,8 +14,9 @@ jobs:
       - name: Instalar dependencias
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3 python3-pip ffmpeg
-          pip install --upgrade streamlink yt-dlp
+          sudo apt-get install -y python3 python3-pip
+          pip install playwright
+          playwright install chromium
 
       - name: Generar playlist
         run: python3 youtube_to_m3u.py
@@ -25,5 +26,5 @@ jobs:
           git config --global user.email "bot@example.com"
           git config --global user.name "GitHub Bot"
           git add playlist.m3u8
-          git commit -m "Actualizar playlist (YouTube con fallback)"
+          git commit -m "Actualizar playlist (Playwright)"
           git push
