--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,35 +1,41 @@
-name: Generar playlist M3U
+name: Generar playlist M3U con Selenium
 
 on:
   schedule:
-    - cron: "0 * * * *"  # Cada hora
-  workflow_dispatch:  # Permite ejecutarlo manualmente
+    - cron: "0 * * * *"   # cada hora
+  workflow_dispatch:       # ejecución manual
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Clonar repositorio
-      uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
 
-    - name: Configurar Python
-      uses: actions/setup-python@v4
+    - name: Instalar Python
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: "3.11"
 
-    - name: Instalar dependencias
-      run: |
-        pip install requests
+    - name: Instalar Google Chrome
+      uses: browser-actions/setup-chrome@v1
 
-    - name: Ejecutar script
+    - name: Instalar dependencias Python
       run: |
-        python3 youtube_to_m3u.py
+        python -m pip install --upgrade pip
+        pip install "selenium>=4.20.0"
+
+    - name: Generar playlist
+      env:
+        CHROME_PATH: ${{ env.CHROME_PATH }}  # lo expone setup-chrome
+      run: |
+        python youtube_to_m3u.py
 
     - name: Commit y Push
       run: |
-        git config --global user.name "github-actions"
-        git config --global user.email "github-actions@github.com"
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add playlist.m3u
-        git commit -m "Actualización automática de playlist" || echo "No hay cambios"
+        git commit -m "Actualización automática de playlist (Selenium + Chrome)" || echo "Sin cambios"
         git push
