--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,41 +1,38 @@
-name: Generar playlist M3U con Selenium
+name: YouTube to M3U
 
 on:
   schedule:
-    - cron: "0 * * * *"   # cada hora
-  workflow_dispatch:       # ejecución manual
+    - cron: "0 * * * *"  # Cada hora
+  workflow_dispatch:     # Permite ejecutarlo manualmente
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Instalar Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Instalar Google Chrome
-      uses: browser-actions/setup-chrome@v1
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget unzip
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+          pip install selenium
 
-    - name: Instalar dependencias Python
-      run: |
-        python -m pip install --upgrade pip
-        pip install "selenium>=4.20.0"
+      - name: Run script
+        run: |
+          python3 youtube_to_m3u.py
 
-    - name: Generar playlist
-      env:
-        CHROME_PATH: ${{ env.CHROME_PATH }}  # lo expone setup-chrome
-      run: |
-        python youtube_to_m3u.py
-
-    - name: Commit y Push
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add playlist.m3u
-        git commit -m "Actualización automática de playlist (Selenium + Chrome)" || echo "Sin cambios"
-        git push
+      - name: Commit and push playlist
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add playlist.m3u
+          git commit -m "Update playlist.m3u [skip ci]" || echo "No changes to commit"
+          git push
