--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: YouTube to M3U
 on:
   schedule:
     - cron: "0 * * * *"  # Cada hora
-  workflow_dispatch:     # Permite ejecutarlo manualmente
+  workflow_dispatch:      # Permite ejecutarlo manualmente
 
 jobs:
   build:
@@ -18,11 +18,15 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Chrome and Chromedriver
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip
           sudo apt-get install -y chromium-browser chromium-chromedriver
+          which chromium-browser
+          which chromedriver
+
+      - name: Install Python dependencies
+        run: |
           pip install selenium
 
       - name: Run script
@@ -33,6 +37,4 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add playlist.m3u
-          git commit -m "Update playlist.m3u [skip ci]" || echo "No changes to commit"
-          git push
+          git add playlist.m3
