--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Extract HLS Debug
+name: Extract Multiple HLS Links
 
 on:
   schedule:
@@ -13,21 +13,35 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Verificar input.txt
+        run: |
+          echo "[INFO] Archivos iniciales:"
+          ls -la
+          echo "[INFO] Contenido de input.txt:"
+          cat input.txt || echo "[ERROR] input.txt no existe o está vacío"
+
       - name: Instalar dependencias
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip
           pip install requests
 
-      - name: Ejecutar script de depuración
+      - name: Ejecutar script
         run: |
-          echo "[INFO] Ejecutando extract_hls_debug.py"
-          python3 extract_hls_debug.py
+          echo "[INFO] Ejecutando extract_hls_multi.py"
+          python3 extract_hls_multi.py
 
-      - name: Confirmar resultados y subir cambios
+      - name: Mostrar archivos generados
+        run: |
+          echo "[INFO] Archivos después de la ejecución:"
+          ls -la
+          echo "[INFO] Si existen, mostramos lista de source_*.html y playlist.m3u:"
+          ls -lh source_*.html playlist.m3u 2>/dev/null || echo "[INFO] No se generaron archivos de salida"
+
+      - name: Subir cambios al repo
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add playlist.m3u source.html source.html.txt || true
+          git add playlist.m3u source_*.html || true
           git commit -m "Actualizar resultados ($(date '+%Y-%m-%d %H:%M'))" || echo "No hay cambios"
           git push
