--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
-name: Extract HLS Links
+name: Extract HLS Links with Playwright
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 * * * *"   # Cada hora
   workflow_dispatch:
 
 permissions:
@@ -16,30 +16,22 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Mostrar estructura inicial
-        run: |
-          echo "[INFO] Estructura inicial del repositorio:"
-          pwd
-          ls -R
-
-      - name: Instalar dependencias
+      - name: Instalar Python y dependencias
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip
-          pip install requests
+          pip install playwright
+          playwright install --with-deps chromium
 
       - name: Ejecutar script
         run: |
-          echo "[INFO] Ejecutando extract_hls_multi.py"
-          python3 extract_hls_multi.py
+          echo "[INFO] Ejecutando extract_hls_playwright.py"
+          python3 extract_hls_playwright.py
 
-      - name: Mostrar estructura después del script
+      - name: Mostrar archivos generados
         run: |
-          echo "[INFO] Estructura después de ejecutar el script:"
-          pwd
-          ls -R
-          echo "[INFO] Contenido de playlist.m3u si existe:"
-          cat playlist.m3u || echo "[INFO] playlist.m3u no existe"
+          echo "[INFO] Archivos generados:"
+          ls -lh source_*.html playlist.m3u 2>/dev/null || echo "[INFO] No se generaron archivos."
 
       - name: Commit y push
         env:
