--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Instalar dependencias
         run: |
-          pip install playwright
+          pip install playwright yt-dlp
           playwright install chromium
 
       - name: Ejecutar script
