--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update YouTube M3U
+name: Update YouTube M3U with Playwright
 
 on:
   schedule:
@@ -12,12 +12,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install yt-dlp
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y yt-dlp
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-      - name: Run Python script
+      - name: Install dependencies
+        run: |
+          pip install playwright
+          playwright install chromium
+
+      - name: Run script
         run: |
           python3 youtube_to_m3u.py
 
