--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update YouTube M3U with Playwright
+name: Update YouTube Playlist
 
 on:
   schedule:
@@ -23,8 +23,7 @@ jobs:
           playwright install chromium
 
       - name: Run script
-        run: |
-          python3 youtube_to_m3u.py
+        run: python3 youtube_to_m3u.py
 
       - name: Commit and push changes
         run: |
