--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,34 +1,43 @@
-name: Update YouTube Playlist
+name: Actualizar playlist M3U
 
 on:
   schedule:
-    - cron: "0 */5 * * *"  # Cada 5 horas
+    - cron: "0 */5 * * *" # Cada 5 horas
   workflow_dispatch:
 
 jobs:
-  update-playlist:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Clonar repositorio
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+    - name: Configurar Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          pip install playwright
-          playwright install chromium
+    - name: Instalar dependencias
+      run: |
+        pip install --upgrade yt-dlp playwright
+        playwright install chromium
 
-      - name: Run script
-        run: python3 youtube_to_m3u.py
+    - name: Ejecutar script
+      run: |
+        python3 youtube_to_m3u.py
 
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add playlist.m3u
-          git commit -m "Auto-update playlist" || echo "No changes to commit"
-          git push
+    - name: Verificar cambios en playlist
+      id: git-check
+      run: |
+        if git diff --quiet playlist.m3u; then
+          echo "changed=false" >> $GITHUB_OUTPUT
+        else
+          echo "changed=true" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Commit y push de la playlist
+      if: steps.git-check.outputs.changed == 'true'
+      run: |
+        git config --global user.name "github-actions"
+        git config --global user.email "actions@g
