--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,27 +1,32 @@
-name: Update YouTube HLS
+name: Generar Telefe M3U
 
 on:
+  workflow_dispatch:   # Permite correrlo a mano desde Actions
   schedule:
-    - cron: "0 */6 * * *"  # Cada 6 horas
-  workflow_dispatch: # Permite ejecutarlo manualmente
+    - cron: "0 */4 * * *"  # cada 4 horas
 
 jobs:
-  update-m3u:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Clonar repositorio
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Instalar yt-dlp
-        run: sudo apt-get install -y yt-dlp
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: Instalar dependencias
+        run: pip install requests
 
       - name: Ejecutar script
-        run: python3 youtube_to_m3u.py
+        run: python telefe.py
 
-      - name: Commit y push
+      - name: Commit cambios
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add playlist.m3u
-          git commit -m "Actualizar enlace HLS"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add telefe.m3u
+          git commit -m "Actualizar Telefe.m3u" || echo "Sin cambios"
           git push
