Actualizar update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,13 +1,14 @@
 name: Generar Telefe M3U
 
 on:
-  workflow_dispatch:   # Permite correrlo a mano desde Actions
+  workflow_dispatch:   # Permite ejecutarlo a mano
   schedule:
     - cron: "0 */4 * * *"  # cada 4 horas
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -20,13 +21,17 @@ jobs:
       - name: Instalar dependencias
         run: pip install requests
 
-      - name: Ejecutar script
+      - name: Ejecutar script Telefe
         run: python telefe.py
 
-      - name: Commit cambios
+      - name: Commit cambios si hay modificaciones
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add telefe.m3u
-          git commit -m "Actualizar Telefe.m3u" || echo "Sin cambios"
-          git push
+          if [[ `git status --porcelain` ]]; then
+            git add telefe.m3u
+            git commit -m "Actualizar Telefe.m3u $(date '+%Y-%m-%d %H:%M:%S')"
+            git push
+          else
+            echo "⚠️ No hubo cambios en telefe.m3u"
+          fi
