--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,33 +1,29 @@
-name: Telefe M3U
+name: Telefe IPTV
 
 on:
   schedule:
-    - cron: "0 */4 * * *"   # ⏰ cada 4 horas
-  workflow_dispatch:        # ▶️ para correrlo manualmente
+    - cron: "0 */4 * * *"   # 🔄 Cada 4 horas
+  workflow_dispatch:        # 👆 Permite lanzarlo manualmente si lo necesitas
 
 jobs:
-  generar-m3u:
+  update-telefe:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: 📦 Instalar dependencias
-        run: pip install requests
-
-      - name: ▶️ Ejecutar script Telefe
+      - name: Run script
         run: python telefe.py
 
-      - name: 💾 Commit archivo .m3u actualizado
+      - name: Commit and push
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "fakuz"
+          git config --global user.email "fakuz@users.noreply.github.com"
           git add telefe.m3u
-          git commit -m "🔄 Update Telefe.m3u" || echo "Sin cambios"
+          git commit -m "⏱️ Update Telefe link"
           git push
