--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,29 +1,32 @@
-name: Telefe IPTV
+name: Actualizar Telefe M3U
 
 on:
   schedule:
-    - cron: "0 */4 * * *"   # 🔄 Cada 4 horas
-  workflow_dispatch:        # 👆 Permite lanzarlo manualmente si lo necesitas
+    - cron: "0 */4 * * *"  # cada 4 horas
+  workflow_dispatch:
 
 jobs:
-  update-telefe:
+  update-m3u:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Configurar Python
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Run script
+      - name: Instalar dependencias
+        run: pip install requests
+
+      - name: Ejecutar script Telefe
         run: python telefe.py
 
-      - name: Commit and push
+      - name: Commit y push de cambios
         run: |
           git config --global user.name "fakuz"
           git config --global user.email "fakuz@users.noreply.github.com"
           git add telefe.m3u
-          git commit -m "⏱️ Update Telefe link"
+          git commit -m "Actualizar telefe.m3u"
           git push
