--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,31 +2,31 @@ name: Actualizar Telefe M3U
 
 on:
   schedule:
-    - cron: "0 */4 * * *"  # cada 4 horas
-  workflow_dispatch:
+    - cron: "0 */4 * * *"   # Cada 4 horas
+  workflow_dispatch:        # Permite ejecutarlo manualmente
 
 jobs:
-  update-m3u:
+  actualizar:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Configurar Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.x"
 
       - name: Instalar dependencias
         run: pip install requests
 
-      - name: Ejecutar script Telefe
+      - name: Ejecutar script
         run: python telefe.py
 
-      - name: Commit y push de cambios
+      - name: Commit y push
         run: |
           git config --global user.name "fakuz"
           git config --global user.email "fakuz@users.noreply.github.com"
           git add telefe.m3u
-          git commit -m "Actualizar telefe.m3u"
+          git commit -m "🔄 Actualización automática Telefe.m3u" || echo "Sin cambios"
           git push
