--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,20 +2,21 @@ name: Actualizar Telefe M3U
 
 on:
   schedule:
-    - cron: "0 */4 * * *"   # Cada 4 horas
-  workflow_dispatch:        # Permite ejecutarlo manualmente
+    - cron: "0 */4 * * *"   # cada 4 horas
+  workflow_dispatch:        # para ejecutarlo manualmente también
 
 jobs:
-  actualizar:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configurar Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: '3.11'
 
       - name: Instalar dependencias
         run: pip install requests
@@ -23,10 +24,10 @@ jobs:
       - name: Ejecutar script
         run: python telefe.py
 
-      - name: Commit y push
+      - name: Subir cambios
         run: |
           git config --global user.name "fakuz"
           git config --global user.email "fakuz@users.noreply.github.com"
           git add telefe.m3u
-          git commit -m "🔄 Actualización automática Telefe.m3u" || echo "Sin cambios"
+          git commit -m "Actualizar Telefe M3U automático"
           git push
