--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,32 +2,28 @@ name: Actualizar Telefe M3U
 
 on:
   schedule:
-    - cron: "0 */4 * * *"   # cada 4 horas
-  workflow_dispatch:        # para ejecutarlo manualmente también
+    - cron: "0 */4 * * *"   # ⏰ Cada 4 horas
+  workflow_dispatch:        # Permite ejecutarlo manualmente también
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Configurar Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Instalar dependencias
-        run: pip install requests
-
-      - name: Ejecutar script
+      - name: Ejecutar script Telefe
         run: python telefe.py
 
-      - name: Subir cambios
+      - name: Commit y Push cambios
         run: |
           git config --global user.name "fakuz"
           git config --global user.email "fakuz@users.noreply.github.com"
           git add telefe.m3u
-          git commit -m "Actualizar Telefe M3U automático"
+          git commit -m "⏰ Auto-actualización Telefe M3U"
           git push
